# jsonlt-ruby

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .rubocop.yml  CITATION.cff  CONTRIBUTING.md  Gemfile  Justfile  README.md  Rakefile  SECURITY.md  jsonlt.gemspec  package.json  pyproject.toml
.github/workflows/: ci.yml
lib/: jsonlt.rb
lib/jsonlt/: table.rb  version.rb
sig/: jsonlt.rbs
test/: test_helper.rb
test/conformance/: test_helper.rb
test/unit/: test_helper.rb  test_table.rb
