[project]
name = "jsonlt-ruby-dev"
version = "0.0.0"
description = "Development dependencies for jsonlt-ruby."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "codespell>=2.4.1",
  "prek>=0.2.23",
  "vale>=3.13.0.0",
  "yamllint>=1.37.1",
]
release = ["cyclonedx-bom>=7.2.1"]

[tool.codespell]
skip = "coverage,coverage.xml,coverage.json,pnpm-lock.yaml,tmp,dist,node_modules,*.cdx.json,vendor"
ignore-words-list = "AKS,CrossReference,Nd,Wont,WONT"
